# machine-learning-recommendation

./: .env.example  .gitignore  README.md  pyproject.toml
app/: app.py
model/: collaborative_filtering.py  content_based_filtering.py  evaluation.py  hybrid_recommender.py
notebooks/: evaluation.ipynb
scripts/: fetch_spotify_features.py  match_audio_features.py  parse_csv.py  parse_csv_unique_song.py  parse_csv_user_song.py
src/: collaborative_filtering.py
